@@ -1,3 +1,7 @@
+2001-08-09  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Recipe.pm (read_recipe): Deal with ambiguity for recipes too
+
 2001-08-08  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Recipe.pm: Add support for big "switch" statement when a
